# rust-sdk

./: .openapi-generator-ignore  Cargo.toml  README.md  git_push.sh
.openapi-generator/: FILES
ci/: Dockerfile  smoke_test.rs
docs/: AddBlacklistMonitor201Response.md  AddBlacklistMonitorRequest.md  AddContact201Response.md  AddContactRequest.md  AddDmarcDomain201Response.md  AddDmarcDomainRequest.md  AddPolicyRule201Response.md  AddSuppressionRequest.md  AddSuppressionRequestEntriesInner.md  AddSuppressionResponse.md  AgentControlPlaneApi.md  AlertRule.md  AlertRulesApi.md  AppendToContactList200Response.md  AppendToContactListRequest.md  BatchCheckOoo200Response.md  BatchCheckOoo200ResponseResultsInner.md  BatchCheckOooRequest.md  BatchDeliverRequest.md  BatchDeliverRequestStructuredData.md  BatchDeliverResponse.md  BatchDeliverResponseDelivery.md  BatchDeliverResponseRejectedInner.md  BatchProductsRequest.md  BatchProductsRequestProductsInner.md  BatchProductsResponse.md  BatchProductsResponseErrorsInner.md  BlacklistMonitor.md  BlacklistMonitorLatestCheck.md  BlacklistMonitoringApi.md  BounceAnalysisApi.md  BounceAnalysisResponse.md  BounceAnalysisResponseAnalysis.md  BounceAnalysisResponseAnalysisCategories.md  BounceAnalysisResponseAnalysisTopDomainsInner.md  BulkUpdateProducts200Response.md  BulkUpdateProductsRequest.md  BulkValidationApi.md  Campaign.md  CampaignAnalyticsApi.md  (+273 more)
src/apis/: agent_control_plane_api.rs  alert_rules_api.rs  blacklist_monitoring_api.rs  bounce_analysis_api.rs  bulk_validation_api.rs  campaign_analytics_api.rs  campaigns_api.rs  configuration.rs  configuration_sets_api.rs  contact_lists_api.rs  content_classification_api.rs  deliverability_advisor_api.rs  dkim_management_api.rs  dmarc_monitoring_api.rs  domain_insights_api.rs  email_sending_api.rs  email_validation_api.rs  engagement_api.rs  event_destinations_api.rs  events_api.rs  global_suppressions_api.rs  inbound_processing_api.rs  inbound_rules_api.rs  ispfbl_guides_api.rs  managed_spf_api.rs  message_events_api.rs  mod.rs  o_auth20_api.rs  out_of_office_api.rs  pipeline_simulation_api.rs  pixel_settings_api.rs  products_api.rs  reputation_api.rs  reputation_policies_api.rs  sender_health_api.rs  sending_delegations_api.rs  sending_domains_api.rs  server_tests_api.rs  spam_checks_api.rs  store_connections_api.rs  (+6 more)
src/models/: add_blacklist_monitor_201_response.rs  add_blacklist_monitor_request.rs  add_contact_201_response.rs  add_contact_request.rs  add_dmarc_domain_201_response.rs  add_dmarc_domain_request.rs  add_policy_rule_201_response.rs  add_suppression_request.rs  add_suppression_request_entries_inner.rs  add_suppression_response.rs  alert_rule.rs  append_to_contact_list_200_response.rs  (+258 more)
