[package]
name = "mailodds"
version = "0.1.0"
authors = ["MailOdds <support@mailodds.com>"]
description = "Official Rust client for the MailOdds Email Validation API"
license = "MIT"
edition = "2021"
repository = "https://github.com/mailodds/rust-sdk"
homepage = "https://mailodds.com"
documentation = "https://mailodds.com/docs"
keywords = ["email", "validation", "verification", "api"]
categories = ["api-bindings", "email"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
tokio = { version = "^1.46.0", features = ["fs"] }
tokio-util = { version = "^0.7", features = ["codec"] }
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart", "stream"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
